feature: prepare for prod
